[package]
name = "wifisnipe-rs-crate"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.67"

[lib]
name = "libwifisnipe"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.4.0"
chrono = "0.4.23"
futures = "0.3.26"
lazy_static = "1.4.0"
libc = { version = "0.2.139", features = ["extra_traits"] }
regex = "1.7.1"
ringbuf = "0.3.2"
interoptopus_backend_csharp = "0.14.17"
interoptopus_backend_cpython = "0.14.15"
tokio = { version = "1.25.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.7", features = ["full"] }
interoptopus = "0.14.15"
rifgen = "0.1.61"

[build-dependencies]
rifgen = "0.1.61"
