[package]
name = "wifisnipe-rs"
version = "0.1.0"
edition = "2021"
publish = false
minimum_version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12.1"
regex = "1.7.1"
ringbuf = "0.3.2"
serialport = "4.2.0"
