[package]
name = "wifisnipe-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1.4.0"
chrono = "0.4.23"
futures = "0.3.26"
lazy_static = "1.4.0"
regex = "1.7.1"
ringbuf = "0.3.2"
tokio = { version = "1.25.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.7", features = ["full"] }
